--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "fabric": "^6.6.4",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
